# priorstates

./: .gitignore  AGENT_INSTALL.md  LICENSE  NOTICE  README.md  install.sh  pyproject.toml
.github/workflows/: README.md  release.yml
docs/: DATA_MODEL.md  PLUGINS.md  PROJECTS_AND_AREAS.md  QUICKSTART.md  RESEARCH_WORKFLOW.md  USER_GUIDE.md  local-ai.md
packaging/: PYPI_TRUSTED_PUBLISHING.md  README.md  build.sh  publish-downloads.sh
packaging/deb/: build-deb.sh
packaging/macos/: build-pkg.sh  priorstates.rb
packaging/rpm/: priorstates.spec
packaging/unix/: install.sh
packaging/windows/: build-installer.ps1  install.ps1  priorstates.iss
packaging/windows/launcher/: PriorStates.vbs
packaging/winget/: README.md
priorstates/: __init__.py  __main__.py  cli.py
priorstates/agents/: __init__.py  adapters.py  install.py
priorstates/cockpit/: ptybridge.py  ptybridge_win.py  server.js  server.py
priorstates/cockpit/public/: app.js  index.html  style.css
priorstates/core/: __init__.py  ai.py  capture.py  config.py  embedder.py  format.py  identity.py  indexer.py  journal.py  native.py  plugins.py  share.py  store.py
priorstates/data/: demo.pspack  demo.psworkspace
priorstates/gui/: __init__.py  app.py
priorstates/mcp/: __init__.py  server.py  tools.py
priorstates/mdlab/: __init__.py  parser.py  runner.py
priorstates/memory/: __init__.py  api.py  pinned.py  writer.py
tests/: test_areas.py  test_gui_services.py  test_gui_smoke.py  test_hub_trust.py  test_named_workspaces.py  test_plugins.py  test_promotion_gate.py  test_trust_graph_phase2.py
